# ochwpro

./: .gitignore  Cargo.toml  LICENSE  README.md  _debug_compare.py  _debug_replay.py  pyproject.toml
libochwpro/: Cargo.toml
libochwpro/src/: lib.rs  model.rs  preprocessing.rs
ochw-wasm/: Cargo.toml  build.ps1  build.sh  char_index.json  ochw_model_fp16.safetensors
ochw-wasm/src/: lib.rs
ochw-web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
ochw-web/src/: App.css  App.tsx  index.css  vite-env.d.ts  worker.ts
ochw-web/src/components/: CanvasBoard.tsx
ochwpro/: __init__.py  char_index.py  dataset.py  demo.py  export_onnx.py  model.py  model_meta.json  pot_parser.py  quick_test.py  stroke_segmenter.py  train.py
